change user id req method
