# docs/swagger.yaml
@@ -3,8 +3,8 @@ info:
     title: ZideQuest Copy
     version: 1.0.0
 servers:
-    - url: http://localhost:3000/api
     - url: https://3ae4-2001-fb1-1c-c64-fe34-97ff-fea7-ade2.ngrok-free.app/api
+    - url: http://localhost:3000/api
 components:
     securitySchemes:
         bearerAuth:
@@ -69,17 +69,13 @@ paths:
                     description: Successful response
                     content:
                         application/json: {}
-    /user/quest/{id}:
+    /user/quest:
         get:
-            parameters:
-            -   in: path
-                name: id
-                required: true
-                schema:
-                    type: string
             tags:
                 - user
             summary: get users quest
+            security:
+                - bearerAuth: []
             responses:
                 "200":
                     description: Successful response
